--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -1,4 +1,4 @@
-name: Windows-2025 Personal Cloud PC (Tailscale + RDP)
+name: Windows-2025 Personal Cloud PC (Tailscale + RDP) 2
 
 on:
   workflow_dispatch:
